# unflakable-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/pytest_unflakable/: README.md  __init__.py  _api.py  _git.py  _plugin.py
tests/: __init__.py  common.py  conftest.py  test_unflakable.py
