[metadata]
name = pytest-unflakable
version = 0.1.1
author = Unflakable
author_email = support@unflakable.com
maintainer = Unflakable
maintainer_email = support@unflakable.com
license = MIT
license_file = LICENSE
url = https://unflakable.com
project_urls =
    Repository = https://github.com/unflakable/unflakable-python
    Documentation = https://docs.unflakable.com/plugins/pytest
description = Unflakable plugin for PyTest
long_description = file: src/pytest_unflakable/README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir=
    =src
packages =
    pytest_unflakable
python_requires = >=3.7
install_requires =
    pytest>=6.2.0
    requests>=2.19.0

[options.extras_require]
dev =
    flake8
    flake8-quotes
    mypy
    pytest-xdist>=2.0.0
    requests-mock[fixture]
    types-requests
    types-setuptools
    typing_extensions

[options.entry_points]
pytest11 =
    unflakable = pytest_unflakable
